--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "start:ios": "npm run ios -- --simulator= 'iPhone 16 Pro Max (6487C130-2C0A-467E-B6D2-52EB7B8D9F20)'"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.1.3",
+    "@react-navigation/stack": "^7.2.7",
     "react": "19.0.0",
     "react-native": "0.78.2",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0"
   },
