--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-vector-icons/evil-icons": "^12.2.0",
+    "@react-native-vector-icons/fontawesome6": "^12.1.0",
+    "@react-native-vector-icons/ionicons": "^12.2.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/material-top-tabs": "^7.3.4",
@@ -23,7 +26,8 @@
     "react-native-pager-view": "^6.8.1",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "^4.10.0",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
